[package]
name = "handlebars-chrono"
version = "0.2.1"
edition = "2021"
authors = ["Ivan Ganev <iganev@cytec.bg>"]
description = "Handlebars helper for using chrono DateTime"
keywords = ["handlebars", "helper", "chrono", "date", "datetime"]
categories = ["template-engine", "web-programming", "value-formatting", "text-processing"]
homepage = "https://github.com/iganev/handlebars-chrono"
repository = "https://github.com/iganev/handlebars-chrono"
documentation = "https://docs.rs/crate/handlebars-chrono/"
readme = "README.md"
license = "BSD-2-Clause"

[lib]
name = "handlebars_chrono"
path = "src/lib.rs"

[dependencies]
handlebars = { version = "^5" }
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
chrono-tz = "^0.8"
serde_json = { version = "^1" }

[badges]
maintenance = { status = "actively-developed" }