[package]
name = "handlebars-chrono"
version = "0.2.1"
edition = "2021"
authors = ["Ivan Ganev <iganev@cytec.bg>"]
description = "Handlebars helper for using chrono DateTime"
keywords = ["handlebars", "helper", "chrono", "date", "datetime"]
categories = ["template-engine", "web-programming", "value-formatting", "text-processing"]
homepage = "https://github.com/iganev/handlebars-chrono"
repository = "https://github.com/iganev/handlebars-chrono"
documentation = "https://docs.rs/crate/handlebars-chrono/"
readme = "README.md"
license = "BSD-2-Clause"

[lib]
name = "handlebars_chrono"
path = "src/lib.rs"

[features]
locale = [ "chrono/unstable-locales" ]
timezone = [ "dep:chrono-tz"]

[dependencies]
handlebars = { version = "^5" }
chrono = { version = "^0.4", features = ["serde"] }
chrono-tz = { version = "^0.8", optional = true }

[dev-dependencies]
serde_json = { version = "^1" }

[badges]
maintenance = { status = "actively-developed" }